<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/alarm"
        android:layout_centerHorizontal="true"
        android:id="@+id/fragment_alarme_alarm"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/fragment_alarme_appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_alarme_alarm"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/paytone"
        android:text="@string/title_home"
        android:textAlignment="center"
        android:textFontWeight="400"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/fragment_alarme_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_alarme_appname"
        android:fontFamily="@font/paytone"
        android:text="@string/author"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/fragment_alarme_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_alarme_author"
        android:fontFamily="@font/paytone"
        android:text="@string/year"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

</RelativeLayout>