<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmConfirmationActivity"
    android:id="@+id/alarm_confirmation_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/alarm"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/paytone"
            android:textSize="24sp"
            android:textAlignment="center"
            android:text="@string/alarm"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alarm_confirmation_vehicle"

            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone"
                android:textSize="24sp"
                android:textAlignment="center"
                android:text="@string/distance"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/paytone"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="safa"
                android:id="@+id/alarm_confirmation_distance"/>
        </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/paytone"
            android:textSize="24sp"
            android:textAlignment="center"
            android:text="@string/address"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/paytone"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_gravity="top"
            android:id="@+id/alarm_confirmation_address"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/alarm_confirmation_close_button"
            android:layout_gravity="center_horizontal"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/close"
            android:fontFamily="@font/paytone"
            />
    </LinearLayout>


</LinearLayout>